# 24.02.23newsparser-telegrambot

./: .dockerignore  .gitignore  Dockerfile  README.md  news.json  pyproject.toml
app/: main.py  misc.py  scraper.py
